dphys-config (20090629~curr-1) UNRELEASED; urgency=low

  * D-PHYS internal test release
  * New upstream pre-release
    - Now supports mktemp by default if available -> debian-defaults.patch
      can be removed.
    - Now throws error if ran unconfigured -> init.d script adapted
  * Removing quilt patch management
  * Install dphys-config.example as default /etc/dphys-config conffile.
  * Define $(DESTDIR) in debian/rules for better readability

 -- Axel Beckert <abe@deuxchevaux.org>  Mon, 29 Jun 2009 15:32:43 +0200

dphys-config (20090605~curr-1) UNRELEASED; urgency=low

  * D-PHYS internal test release
  * New upstream pre-release
    - Now works with every web server (e.g. also ACME micro_httpd)
    - Now handles blanks and backslashes correctly while preprocessing
      and reading its own configuration file. (Closes: #510910)
    - Now supports file:/// URLs for configuration file locations
    - New option -c to override hostname in chrooted environments
    - Removed bashism fixes from last NMU since they have been intergrated
      by upstream even though Debian doesn't require them anymore since
      policy 3.8.1.
    - Upstream updated man page to fix a bunch of lintian warnings.
    - Now supports configurable temporary directory (defaults to /var/tmp)
      and optional usage of mktemp (also obsoletes mktemp fix from last NMU)
  * New maintainer
  * Updated e-mail addresses and URLs of upstream website in
    debian/control and debian/copyright
  * Added Vcs-* headers.
  * Bumped Standards-Version to 3.8.1
    - Changed all "(C)" to "©" in debian/copyright.
  * Added a watch file.
  * Fixed lintian warnings:
    - debian-rules-ignores-make-clean-error
    - using-first-person-in-description
  * Changed behaviour of init.d script and cronjob:
    - init.d: Don't start automatically inside a chrooted
      environment. chrooted() test taken from udev.postinst.
    - init.d, cron.d: Don't start automatically if no config file has been